@@ -22,15 +22,15 @@ repositories {
 }
 
 dependencies {
-    compile 'org.apache.commons:commons-dbcp2:2.9.0'
-    compile 'com.fasterxml.jackson.core:jackson-databind:2.14.1'
-    compile 'org.apache.logging.log4j:log4j-api:2.19.0'
-    compile 'org.apache.logging.log4j:log4j-core:2.19.0'
-    compile 'com.oracle.database.jdbc:ojdbc8:21.7.0.0'
-    compile 'org.springframework:spring-beans:5.3.17'
-    compile 'org.springframework:spring-jdbc:5.3.17'
+    implementation 'org.apache.commons:commons-dbcp2:2.9.0'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.1'
+    implementation 'org.apache.logging.log4j:log4j-api:2.19.0'
+    implementation 'org.apache.logging.log4j:log4j-core:2.19.0'
+    implementation 'com.oracle.database.jdbc:ojdbc8:21.7.0.0'
+    implementation 'org.springframework:spring-beans:5.3.17'
+    implementation 'org.springframework:spring-jdbc:5.3.17'
 
-    compile fileTree(dir: 'lib', include: '*.jar')
+    comimplementationpile fileTree(dir: 'lib', include: '*.jar')
 }
 
 jar {
@@ -39,7 +39,7 @@ jar {
             'Built-By': System.getProperty('user.name'),
             'Built-Date': new Date(),
             'Built-JDK': System.getProperty('java.version'),
-            'Class-Path': configurations.compile.collect { it.getName() }.join(' '),
+            'Class-Path': configurations.runtimeClasspath.collect { it.getName() }.join(' '),
             'Main-Class': mainClassName
         )
     }
